// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tiger insights > should load empty insights for out-of-range page 1`] = `
{
  "allItems": [
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "metric_has_null_value",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  "title": "Metric has null value",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "c5ee7836-126c-41aa-bd69-1873d379a065",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "f107b852334c4730abc4e11608530bb2",
                  "title": "_Snapshot [EOP]",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "9bd8d6e1d80f4f15965be8a7926c590f",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_product.product",
                    "type": "displayForm",
                  },
                  "localIdentifier": "204473a01e6442f8a10822ff15b7a0d2",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                },
              },
            ],
            "localIdentifier": "columns",
          },
        ],
        "filters": [
          {
            "positiveAttributeFilter": {
              "displayForm": {
                "identifier": "f_owner.region_id",
                "type": "displayForm",
              },
              "in": {
                "values": [
                  "",
                  "East Coast",
                ],
              },
            },
          },
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "2000-08-07 00:00",
              "to": "2022-09-07 23:59",
            },
          },
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "attr.f_product.product",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "CompuSci",
                  "Educationly",
                ],
              },
            },
          },
        ],
        "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "measureSortItem": {
                "direction": "desc",
                "locators": [
                  {
                    "attributeLocatorItem": {
                      "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                      "element": "East Coast",
                    },
                  },
                  {
                    "measureLocatorItem": {
                      "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                    },
                  },
                ],
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "measureSortItem": {
              "direction": "desc",
              "locators": [
                {
                  "attributeLocatorItem": {
                    "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                    "element": "East Coast",
                  },
                },
                {
                  "measureLocatorItem": {
                    "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  },
                },
              ],
            },
          },
        ],
        "summary": "AD has null value",
        "title": "AD has null value",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "cf7c621eaf5f44f483c6ac52ca5e7fde",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_activity.subject",
                    "type": "displayForm",
                  },
                  "localIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "big insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "1ed7c5a07de94cf9ac583124b909f7bf",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "dt_activity_timestamp.year",
                    "type": "displayForm",
                  },
                  "localIdentifier": "63e1799693114006adfed9e510b00a83",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "relativeDateFilter": {
              "dataSet": {
                "identifier": "dt_activity_timestamp",
                "type": "dataSet",
              },
              "granularity": "GDC.time.year",
            },
          },
        ],
        "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "invalid insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "aggregation": "sum",
                      "filters": [],
                      "item": {
                        "identifier": "fact.f_activity.activitydate",
                        "type": "fact",
                      },
                    },
                  },
                  "format": "#,##0.00",
                  "localIdentifier": "8e79bc72230b460487232e0c67f4e2c9",
                  "title": "Sum of Activity (Date)",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_opportunity.id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "434ea45fa89e4a56ba2a827572a93852",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_account.account.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cfc7199c9e8c4f829bb803cc28197d27",
                },
              },
            ],
            "localIdentifier": "view",
          },
        ],
        "filters": [],
        "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
        "isLocked": false,
        "properties": {
          "sortItems": [],
        },
        "ref": {
          "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
          "type": "insight",
        },
        "sorts": [],
        "summary": "",
        "title": "many data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:column",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                "direction": "desc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
              "direction": "desc",
            },
          },
        ],
        "summary": "",
        "title": "merge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "8d33a0b1-cfdf-4074-a26a-4c4357774967",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "58c6f0115c95489da76f0cff48df18d2",
                  "title": "# Of Opportunities Won",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_product.product.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "1900-11-20 00:00",
              "to": "1900-12-20 23:59",
            },
          },
        ],
        "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "No data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "e519fa2a-86c3-4e32-8313-0c03061626b1",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "e5bd892b4d0b445fae98c549267ab9a8",
                  "title": "Parent metric",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.department_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
              "direction": "asc",
            },
          },
        ],
        "summary": "Parent Insight",
        "title": "Parent Insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "unmerge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
  ],
  "items": [],
  "limit": 50,
  "offset": 8,
  "totalCount": 8,
}
`;

exports[`tiger insights > should load insights 1`] = `
{
  "allItems": [
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "metric_has_null_value",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  "title": "Metric has null value",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "c5ee7836-126c-41aa-bd69-1873d379a065",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "f107b852334c4730abc4e11608530bb2",
                  "title": "_Snapshot [EOP]",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "9bd8d6e1d80f4f15965be8a7926c590f",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_product.product",
                    "type": "displayForm",
                  },
                  "localIdentifier": "204473a01e6442f8a10822ff15b7a0d2",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                },
              },
            ],
            "localIdentifier": "columns",
          },
        ],
        "filters": [
          {
            "positiveAttributeFilter": {
              "displayForm": {
                "identifier": "f_owner.region_id",
                "type": "displayForm",
              },
              "in": {
                "values": [
                  "",
                  "East Coast",
                ],
              },
            },
          },
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "2000-08-07 00:00",
              "to": "2022-09-07 23:59",
            },
          },
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "attr.f_product.product",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "CompuSci",
                  "Educationly",
                ],
              },
            },
          },
        ],
        "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "measureSortItem": {
                "direction": "desc",
                "locators": [
                  {
                    "attributeLocatorItem": {
                      "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                      "element": "East Coast",
                    },
                  },
                  {
                    "measureLocatorItem": {
                      "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                    },
                  },
                ],
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "measureSortItem": {
              "direction": "desc",
              "locators": [
                {
                  "attributeLocatorItem": {
                    "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                    "element": "East Coast",
                  },
                },
                {
                  "measureLocatorItem": {
                    "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  },
                },
              ],
            },
          },
        ],
        "summary": "AD has null value",
        "title": "AD has null value",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "cf7c621eaf5f44f483c6ac52ca5e7fde",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_activity.subject",
                    "type": "displayForm",
                  },
                  "localIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "big insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "1ed7c5a07de94cf9ac583124b909f7bf",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "dt_activity_timestamp.year",
                    "type": "displayForm",
                  },
                  "localIdentifier": "63e1799693114006adfed9e510b00a83",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "relativeDateFilter": {
              "dataSet": {
                "identifier": "dt_activity_timestamp",
                "type": "dataSet",
              },
              "granularity": "GDC.time.year",
            },
          },
        ],
        "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "invalid insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "aggregation": "sum",
                      "filters": [],
                      "item": {
                        "identifier": "fact.f_activity.activitydate",
                        "type": "fact",
                      },
                    },
                  },
                  "format": "#,##0.00",
                  "localIdentifier": "8e79bc72230b460487232e0c67f4e2c9",
                  "title": "Sum of Activity (Date)",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_opportunity.id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "434ea45fa89e4a56ba2a827572a93852",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_account.account.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cfc7199c9e8c4f829bb803cc28197d27",
                },
              },
            ],
            "localIdentifier": "view",
          },
        ],
        "filters": [],
        "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
        "isLocked": false,
        "properties": {
          "sortItems": [],
        },
        "ref": {
          "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
          "type": "insight",
        },
        "sorts": [],
        "summary": "",
        "title": "many data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:column",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                "direction": "desc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
              "direction": "desc",
            },
          },
        ],
        "summary": "",
        "title": "merge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "8d33a0b1-cfdf-4074-a26a-4c4357774967",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "58c6f0115c95489da76f0cff48df18d2",
                  "title": "# Of Opportunities Won",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_product.product.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "1900-11-20 00:00",
              "to": "1900-12-20 23:59",
            },
          },
        ],
        "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "No data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "e519fa2a-86c3-4e32-8313-0c03061626b1",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "e5bd892b4d0b445fae98c549267ab9a8",
                  "title": "Parent metric",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.department_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
              "direction": "asc",
            },
          },
        ],
        "summary": "Parent Insight",
        "title": "Parent Insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "unmerge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
  ],
  "items": [
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "metric_has_null_value",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  "title": "Metric has null value",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "c5ee7836-126c-41aa-bd69-1873d379a065",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "f107b852334c4730abc4e11608530bb2",
                  "title": "_Snapshot [EOP]",
                },
              },
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "9bd8d6e1d80f4f15965be8a7926c590f",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_product.product",
                    "type": "displayForm",
                  },
                  "localIdentifier": "204473a01e6442f8a10822ff15b7a0d2",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                },
              },
            ],
            "localIdentifier": "columns",
          },
        ],
        "filters": [
          {
            "positiveAttributeFilter": {
              "displayForm": {
                "identifier": "f_owner.region_id",
                "type": "displayForm",
              },
              "in": {
                "values": [
                  "",
                  "East Coast",
                ],
              },
            },
          },
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "2000-08-07 00:00",
              "to": "2022-09-07 23:59",
            },
          },
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "attr.f_product.product",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "CompuSci",
                  "Educationly",
                ],
              },
            },
          },
        ],
        "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "measureSortItem": {
                "direction": "desc",
                "locators": [
                  {
                    "attributeLocatorItem": {
                      "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                      "element": "East Coast",
                    },
                  },
                  {
                    "measureLocatorItem": {
                      "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                    },
                  },
                ],
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-0322-82f1-b86ky73k90f8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "measureSortItem": {
              "direction": "desc",
              "locators": [
                {
                  "attributeLocatorItem": {
                    "attributeIdentifier": "12f5fa008d404c5092f476a00bb1cda7",
                    "element": "East Coast",
                  },
                },
                {
                  "measureLocatorItem": {
                    "measureIdentifier": "38b871775be5400a98fd261a38e2cb9c",
                  },
                },
              ],
            },
          },
        ],
        "summary": "AD has null value",
        "title": "AD has null value",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "cf7c621eaf5f44f483c6ac52ca5e7fde",
                  "title": "_Timeline [EOP]",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_activity.subject",
                    "type": "displayForm",
                  },
                  "localIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "5517045e-661f-4d6b-b0b0-98030ab9f68c",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "644e49c9164d4763b23b4cf7436de0ef",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "big insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "1ed7c5a07de94cf9ac583124b909f7bf",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "dt_activity_timestamp.year",
                    "type": "displayForm",
                  },
                  "localIdentifier": "63e1799693114006adfed9e510b00a83",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "relativeDateFilter": {
              "dataSet": {
                "identifier": "dt_activity_timestamp",
                "type": "dataSet",
              },
              "granularity": "GDC.time.year",
            },
          },
        ],
        "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "81452cc9-558b-4b4e-a70b-0a80f3bd2924",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "63e1799693114006adfed9e510b00a83",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "invalid insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "aggregation": "sum",
                      "filters": [],
                      "item": {
                        "identifier": "fact.f_activity.activitydate",
                        "type": "fact",
                      },
                    },
                  },
                  "format": "#,##0.00",
                  "localIdentifier": "8e79bc72230b460487232e0c67f4e2c9",
                  "title": "Sum of Activity (Date)",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_opportunity.id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "434ea45fa89e4a56ba2a827572a93852",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_account.account.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cfc7199c9e8c4f829bb803cc28197d27",
                },
              },
            ],
            "localIdentifier": "view",
          },
        ],
        "filters": [],
        "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
        "isLocked": false,
        "properties": {
          "sortItems": [],
        },
        "ref": {
          "identifier": "dcce2234-9097-47e7-a165-36cdbaa2e134",
          "type": "insight",
        },
        "sorts": [],
        "summary": "",
        "title": "many data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:column",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                "direction": "desc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "3ef94acb-1e15-49ef-88d5-e9e2931be959",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
              "direction": "desc",
            },
          },
        ],
        "summary": "",
        "title": "merge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "8d33a0b1-cfdf-4074-a26a-4c4357774967",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "58c6f0115c95489da76f0cff48df18d2",
                  "title": "# Of Opportunities Won",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "label.f_product.product.name",
                    "type": "displayForm",
                  },
                  "localIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "absoluteDateFilter": {
              "dataSet": {
                "identifier": "dt_closedate_timestamp",
                "type": "dataSet",
              },
              "from": "1900-11-20 00:00",
              "to": "1900-12-20 23:59",
            },
          },
        ],
        "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "f00bd5d5-91da-4139-9e7e-5498d9fe49b5",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "cd73fb09abc34c4c92042ed0421a21f5",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "No data",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "e519fa2a-86c3-4e32-8313-0c03061626b1",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "e5bd892b4d0b445fae98c549267ab9a8",
                  "title": "Parent metric",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.department_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [],
        "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "b3b665b7-bca2-4462-82f1-b0e01dff8afe",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "ce9720f3ccc642acb66d288a9adce435",
              "direction": "asc",
            },
          },
        ],
        "summary": "Parent Insight",
        "title": "Parent Insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
    {
      "insight": {
        "buckets": [
          {
            "items": [
              {
                "measure": {
                  "definition": {
                    "measureDefinition": {
                      "filters": [],
                      "item": {
                        "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                        "type": "measure",
                      },
                    },
                  },
                  "localIdentifier": "5f10774f0ef24bf0abf93cacfe2a7454",
                  "title": "Amount",
                },
              },
            ],
            "localIdentifier": "measures",
          },
          {
            "items": [
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "localIdentifier": "e6b6e5c7d5754dda9afc4fdfa3c93d9f",
                },
              },
              {
                "attribute": {
                  "displayForm": {
                    "identifier": "attr.f_stage.stagename",
                    "type": "displayForm",
                  },
                  "localIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                },
              },
            ],
            "localIdentifier": "attribute",
          },
        ],
        "filters": [
          {
            "negativeAttributeFilter": {
              "displayForm": {
                "identifier": "label.f_stage.stagename.order",
                "type": "displayForm",
              },
              "notIn": {
                "values": [
                  "101",
                  "102",
                  "103",
                ],
              },
            },
          },
        ],
        "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
        "isLocked": false,
        "properties": {
          "sortItems": [
            {
              "attributeSortItem": {
                "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
                "direction": "asc",
              },
            },
          ],
        },
        "ref": {
          "identifier": "fb53ecfb-3874-4bee-8612-afecd3fa3e04",
          "type": "insight",
        },
        "sorts": [
          {
            "attributeSortItem": {
              "attributeIdentifier": "168b0bbeefac47eeae7cdc172cd2083e",
              "direction": "asc",
            },
          },
        ],
        "summary": "",
        "title": "unmerge cells insight",
        "uri": "sanitize_uri",
        "visualizationUrl": "local:table",
      },
    },
  ],
  "limit": 50,
  "offset": 0,
  "totalCount": 8,
}
`;
